# sfml_template

./: CMakeLists.txt
include/: includes.hpp
source/: main.cpp
